Asteria/force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <description>Ores, minerals, and other materials in Inventory are available for Purchase.</description>
    <label>Inventory</label>
    <nameField>
        <displayFormat>Inv-{00000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>