Asteria/force-app/main/default/objects/Inventory__c/fields/InventorySelfLookup__c.field-meta.xml
<CustomField>
    <fullName>InventorySelfLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup to Inventory.</description>
    <inlineHelpText>Self-lookup to Inventory.</inlineHelpText>
    <label>InventorySelfLookup</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>