Asteria/force-app/main/default/objects/Inventory__c/fields/Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Price__c</fullName>
    <formula>CASE(Unit_Price__c,
  &quot;$1,000&quot;, 1000,
  &quot;$50,000&quot;, 50000,
  &quot;$100,000&quot;, 100000,
  &quot;$250,000&quot;, 250000,
  &quot;$1,000,000&quot;, 1000000,
  &quot;$5,000,000&quot;, 5000000,
null) * Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>