Asteria/force-app/main/default/objects/Inventory__c/fields/Item_Price_Text__c.field-meta.xml
<CustomField>
    <fullName>Item_Price_Text__c</fullName>
    <formula>IF( Item_Price__c &gt;= 9999999.00,
&quot;$&quot; &amp; (TEXT(Item_Price__c / 1000000)) &amp; &quot; MM&quot;,
&quot;$&quot; &amp; (TEXT(Item_Price__c / 1000)) &amp; &quot; K&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Price (Text)</label>
    <type>Text</type>
</CustomField>