Asteria/force-app/main/default/objects/Inventory__c/fields/Mining_Site__c.field-meta.xml
<CustomField>
    <fullName>Mining_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Mining Site where the ore was extracted.</description>
    <inlineHelpText>The Mining Site where the ore was extracted.</inlineHelpText>
    <label>Mining Site</label>
    <referenceTo>Mining_Site__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>