Asteria/force-app/main/default/objects/Inventory__c/fields/Mining_Site_List__c.field-meta.xml
<CustomField>
    <fullName>Mining_Site_List__c</fullName>
    <description>The Mining Site where this ore was extracted.</description>
    <inlineHelpText>The Mining Site where this ore was extracted.</inlineHelpText>
    <label>Mining Site</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mining_Site</valueSetName>
    </valueSet>
</CustomField>