Asteria/force-app/main/default/objects/Inventory__c/fields/Mothership__c.field-meta.xml
<CustomField>
    <fullName>Mothership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mothership</label>
    <referenceTo>Mothership__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>