Asteria/force-app/main/default/objects/Inventory__c/fields/Number_Of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Orders__c</fullName>
    <description>Sums up the numbers of Purchase Orders for Inventory.</description>
    <inlineHelpText>Sums up the numbers of Purchase Orders for Inventory.</inlineHelpText>
    <label>Number Of Orders</label>
    <summaryForeignKey>Purchase_Orders__c.Inventory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>