Asteria/force-app/main/default/objects/Inventory__c/fields/Ore_Type__c.field-meta.xml
<CustomField>
    <fullName>Ore_Type__c</fullName>
    <description>The type of ore indicated for this Inventory record.</description>
    <inlineHelpText>The type of ore indicated for this Inventory record.</inlineHelpText>
    <label>Ore Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inventory</valueSetName>
    </valueSet>
</CustomField>