Asteria/force-app/main/default/objects/Inventory__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This inventory record has been Rejected.</description>
    <inlineHelpText>This inventory record has been Rejected.</inlineHelpText>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>