Asteria/force-app/main/default/objects/Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Describes whether the Inventory item is &apos;New&apos;, is &apos;Pending&apos; approval, or has been &apos;Approved&apos;.</description>
    <inlineHelpText>Describes whether the Inventory item is &apos;New&apos;, is &apos;Pending&apos; approval, or has been &apos;Approved&apos;.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Rejected__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>