Asteria/force-app/main/default/objects/Inventory__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>The price per unit for this type of Inventory item.</description>
    <inlineHelpText>The price per unit for this type of Inventory item.</inlineHelpText>
    <label>Unit Price</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ore_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$1,000</fullName>
            </value>
            <value>
                <fullName>$50,000</fullName>
            </value>
            <value>
                <fullName>$100,000</fullName>
            </value>
            <value>
                <fullName>$250,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000</fullName>
            </value>
            <value>
                <fullName>$5,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>