Asteria/force-app/main/default/objects/Inventory__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>The Weight of this ore measured in GSU (Galactic Standard Units).</description>
    <inlineHelpText>The Weight of this ore measured in GSU (Galactic Standard Units).</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>