Asteria/force-app/main/default/objects/Inventory__c/fields/Weight_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Weight_Rejected__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The weight of a Rejected item is still recorded in this field; however, it will not be included in the Inventory summary fields.</description>
    <inlineHelpText>The weight of a Rejected item is still recorded in this field; however, it will not be included in the Inventory summary fields.</inlineHelpText>
    <label>Weight: Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>