Asteria/force-app/main/default/objects/Inventory__c/validationRules/One_Order_per_Inventory.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Order_per_Inventory</fullName>
    <active>true</active>
    <description>Can&apos;t place duplicate orders for Inventory items.</description>
    <errorConditionFormula>IF(Number_Of_Orders__c &gt; 1,TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Can&apos;t place duplicate orders for Inventory items.</errorMessage>
</ValidationRule>