Asteria/force-app/main/default/objects/Inventory__c/validationRules/Weight_Field_Greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Field_Greater_than_Zero</fullName>
    <active>true</active>
    <description>The weight field must be greater than or equal to 0.</description>
    <errorConditionFormula>Weight__c &lt; 0</errorConditionFormula>
    <errorMessage>The weight field cannot be negative.</errorMessage>
</ValidationRule>