Asteria/force-app/main/default/objects/Inventory__c/listViews/Inventory_Management_Inventory.listView-meta.xml
<ListView>
    <fullName>Inventory_Management_Inventory</fullName>
    <filterScope>Queue</filterScope>
    <label>Inventory Management</label>
    <queue>Inventory_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>